created base models; recipe, ingredient, instruction

--- a/server/model-config.json
+++ b/server/model-config.json
@@ -50,5 +50,17 @@
   "container": {
     "dataSource": "storage",
     "public": true
+  },
+  "recipe": {
+    "dataSource": "db",
+    "public": true
+  },
+  "ingredient": {
+    "dataSource": "db",
+    "public": true
+  },
+  "instruction": {
+    "dataSource": "db",
+    "public": true
   }
 }
