--- a/server/model-config.json
+++ b/server/model-config.json
@@ -62,5 +62,9 @@
   "instruction": {
     "dataSource": "db",
     "public": true
+  },
+  "response": {
+    "dataSource": "db",
+    "public": true
   }
 }
